--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "android_world"
+name = "rm_android_world"
 version = "0.1.0"
 description = "Android World Environment Project"
 readme = "README.md"
