--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "rm_android_world"
+name = "android_world"
 version = "0.1.0"
 description = "Android World Environment Project"
 readme = "README.md"
@@ -41,7 +41,8 @@ dev = [
 ]
 
 [tool.setuptools]
-packages = ["android_world"]
+# Use find_packages to automatically include all subdirectories
+packages = {find = {where = ["."], include = ["android_world*"]}}
 
 [tool.setuptools.package-dir]
 android_world = "android_world"
