--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "jsonschema==4.17.3",
     "matplotlib>=3.6.1",
     "numpy>=1.26.3",
-    "opencv-python",
+    "opencv-python-headless",
     "pandas>=2.1.4",
     "pydub",
     "python-Levenshtein",
